TLINE-166 #comment changed `max-device-height` to fix visual error on small devices need to apply similar fix to badge in profile

--- a/mobile/scss/modules/profile.scss
+++ b/mobile/scss/modules/profile.scss
@@ -1056,7 +1056,7 @@
   }
 }
 
-@media only screen and (max-device-height : 568px) {
+@media only screen and (max-device-height : 570px) {
   .profile-visual {
     height: 84px;
 
